[#12297] test(secret): Shorten create-path secret unit tests
Keep Copilot-required catalog/schema/fileset coverage with shorter names and
bodies; drop redundant SecretPropertyUtils/Python secret tests.

Co-authored-by: Cursor <cursoragent@cursor.com>